edition = "2023";  // successor to proto2 and proto3

package sensor;

import "google/protobuf/empty.proto";
import "internalapi/sensor/admission_control.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/sensor;sensor";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message MsgFromAdmissionControl {}

message MsgToAdmissionControl {
  oneof msg {
    AdmissionControlSettings settings_push = 1;
    AdmCtrlUpdateResourceRequest update_resource_request = 2;
  }
}

// A Sensor service that allows node scrapes to report results.
service AdmissionControlManagementService {
  rpc Communicate(stream MsgFromAdmissionControl) returns (stream MsgToAdmissionControl);

  rpc PolicyAlerts(AdmissionControlAlerts) returns (google.protobuf.Empty);
}
